// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectView renders a loading indicator during the loading 1`] = `
<div
  className=""
>
  Loading
</div>
`;

exports[`ProjectView renders an error card for an error 1`] = `
<div
  className="card errorcard"
>
  <div
    style={
      Object {
        "paddingBottom": "32px",
        "paddingLeft": "32px",
        "paddingRight": "32px",
        "paddingTop": "32px",
      }
    }
  >
    <div
      className="errorcard-container"
    >
      <div
        style={
          Object {
            "paddingBottom": "16px",
            "paddingLeft": "16px",
            "paddingRight": "16px",
            "paddingTop": "16px",
          }
        }
      >
        <h1
          className="title-l"
        >
          An error has occurred
        </h1>
      </div>
      <p>
        Please contact the administrator to try to find a solution (code: 500)
      </p>
    </div>
  </div>
</div>
`;

exports[`ProjectView renders an error card for an unsupported state 1`] = `
<div
  className="card errorcard"
>
  <div
    style={
      Object {
        "paddingBottom": "32px",
        "paddingLeft": "32px",
        "paddingRight": "32px",
        "paddingTop": "32px",
      }
    }
  >
    <div
      className="errorcard-container"
    >
      <div
        style={
          Object {
            "paddingBottom": "16px",
            "paddingLeft": "16px",
            "paddingRight": "16px",
            "paddingTop": "16px",
          }
        }
      >
        <h1
          className="title-l"
        >
          The project is in an unsupported state: INITIAL__STATE
        </h1>
      </div>
      <p>
        Contact your administrator to find a suitable solution (code: 1001)
      </p>
    </div>
  </div>
</div>
`;

exports[`ProjectView renders the project with activities 1`] = `
<div
  className="projectview"
>
  <div
    className="card projectheadercard"
  >
    <div
      style={
        Object {
          "paddingBottom": "16px",
          "paddingLeft": "16px",
          "paddingRight": "16px",
          "paddingTop": "16px",
        }
      }
    >
      <h1
        className="card-herotitle title-xl"
      >
        Project
      </h1>
    </div>
    <div
      style={
        Object {
          "paddingBottom": "8px",
          "paddingLeft": "16px",
          "paddingRight": "16px",
          "paddingTop": "8px",
        }
      }
    >
      <div
        className="projectheadercard-viewdescription"
      >
        <p>
          No description provided
        </p>
        <div
          style={
            Object {
              "paddingBottom": undefined,
              "paddingLeft": "16px",
              "paddingRight": undefined,
              "paddingTop": undefined,
            }
          }
        >
          <button
            className="button button--default"
            onClick={[Function]}
          >
            <div
              style={
                Object {
                  "paddingBottom": "8px",
                  "paddingLeft": "16px",
                  "paddingRight": "16px",
                  "paddingTop": "8px",
                }
              }
            >
              Edit
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="projectview-main"
  >
    <div
      className="projectview-details"
    >
      <div
        className="card projectsemanticresourceslistcard"
      >
        <div
          style={
            Object {
              "paddingBottom": "16px",
              "paddingLeft": "16px",
              "paddingRight": "16px",
              "paddingTop": "16px",
            }
          }
        >
          <h2
            className="card-primarytitle title-l"
          >
            Semantic Resources
          </h2>
        </div>
        <ul
          className="list list--highlighted"
        >
          <div
            style={
              Object {
                "paddingBottom": "8px",
                "paddingLeft": undefined,
                "paddingRight": undefined,
                "paddingTop": "8px",
              }
            }
          >
            <li
              className="tile tile--singleline"
            >
              <h4
                className="tile-maintext body-s"
              >
                /model/model.ecore
              </h4>
              <div
                className="semanticresources-size caption-s"
              />
            </li>
          </div>
        </ul>
      </div>
      <div
        className="card projectrepresentationslistcard"
      >
        <div
          style={
            Object {
              "paddingBottom": "16px",
              "paddingLeft": "16px",
              "paddingRight": "16px",
              "paddingTop": "16px",
            }
          }
        >
          <h2
            className="card-primarytitle title-l"
          >
            Representations
          </h2>
        </div>
        <ul
          className="list list--highlighted"
        >
          <div
            style={
              Object {
                "paddingBottom": "8px",
                "paddingLeft": undefined,
                "paddingRight": undefined,
                "paddingTop": "8px",
              }
            }
          >
            <li
              className="tile tile--twoline"
            >
              <div>
                <h4
                  className="tile-maintext body-s"
                >
                  Class Diagram
                </h4>
                <h5
                  className="tile-additionaltext caption-xs"
                />
              </div>
            </li>
            <li
              className="tile tile--twoline"
            >
              <div>
                <h4
                  className="tile-maintext body-s"
                >
                  Activity Diagram
                </h4>
                <h5
                  className="tile-additionaltext caption-xs"
                />
              </div>
            </li>
          </div>
        </ul>
      </div>
    </div>
    <div
      className="projectview-workflow"
    >
      <div
        className="card workflowcard"
      >
        <div
          style={
            Object {
              "paddingBottom": "16px",
              "paddingLeft": "16px",
              "paddingRight": "16px",
              "paddingTop": "16px",
            }
          }
        >
          <h2
            className="card-primarytitle title-l"
          >
            Workflow
          </h2>
        </div>
        <div
          className="tabbar"
        >
          <div
            className="tabbar-nav tabbar-nav--disabled"
            data-side="previous"
            onClick={[Function]}
          >
            &lt;
          </div>
          <div
            className="tabbar-tabs"
          >
            <div
              className="tabbar-tab title-m tabbar-tab--selected"
              data-index={0}
              onClick={[Function]}
            >
              page1
            </div>
          </div>
          <div
            className="tabbar-nav tabbar-nav--disabled"
            data-side="next"
            onClick={[Function]}
          >
            &gt;
          </div>
        </div>
        <div
          style={
            Object {
              "paddingBottom": "16px",
              "paddingLeft": "16px",
              "paddingRight": "16px",
              "paddingTop": "8px",
            }
          }
        >
          <div
            className="card-text body-s"
          >
            No sections found in the workflow
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProjectView renders the project without activities 1`] = `
<div
  className="projectview"
>
  <div
    className="card projectheadercard"
  >
    <div
      style={
        Object {
          "paddingBottom": "16px",
          "paddingLeft": "16px",
          "paddingRight": "16px",
          "paddingTop": "16px",
        }
      }
    >
      <h1
        className="card-herotitle title-xl"
      >
        Project
      </h1>
    </div>
    <div
      style={
        Object {
          "paddingBottom": "8px",
          "paddingLeft": "16px",
          "paddingRight": "16px",
          "paddingTop": "8px",
        }
      }
    >
      <div
        className="projectheadercard-viewdescription"
      >
        <p>
          No description provided
        </p>
        <div
          style={
            Object {
              "paddingBottom": undefined,
              "paddingLeft": "16px",
              "paddingRight": undefined,
              "paddingTop": undefined,
            }
          }
        >
          <button
            className="button button--default"
            onClick={[Function]}
          >
            <div
              style={
                Object {
                  "paddingBottom": "8px",
                  "paddingLeft": "16px",
                  "paddingRight": "16px",
                  "paddingTop": "8px",
                }
              }
            >
              Edit
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="projectview-main"
  >
    <div
      className="projectview-details"
    >
      <div
        className="card projectsemanticresourceslistcard"
      >
        <div
          style={
            Object {
              "paddingBottom": "16px",
              "paddingLeft": "16px",
              "paddingRight": "16px",
              "paddingTop": "16px",
            }
          }
        >
          <h2
            className="card-primarytitle title-l"
          >
            Semantic Resources
          </h2>
        </div>
        <ul
          className="list list--highlighted"
        >
          <div
            style={
              Object {
                "paddingBottom": "8px",
                "paddingLeft": undefined,
                "paddingRight": undefined,
                "paddingTop": "8px",
              }
            }
          >
            <li
              className="tile tile--singleline"
            >
              <h4
                className="tile-maintext body-s"
              >
                /model/model.ecore
              </h4>
              <div
                className="semanticresources-size caption-s"
              />
            </li>
          </div>
        </ul>
      </div>
      <div
        className="card projectrepresentationslistcard"
      >
        <div
          style={
            Object {
              "paddingBottom": "16px",
              "paddingLeft": "16px",
              "paddingRight": "16px",
              "paddingTop": "16px",
            }
          }
        >
          <h2
            className="card-primarytitle title-l"
          >
            Representations
          </h2>
        </div>
        <ul
          className="list list--highlighted"
        >
          <div
            style={
              Object {
                "paddingBottom": "8px",
                "paddingLeft": undefined,
                "paddingRight": undefined,
                "paddingTop": "8px",
              }
            }
          >
            <li
              className="tile tile--twoline"
            >
              <div>
                <h4
                  className="tile-maintext body-s"
                >
                  Class Diagram
                </h4>
                <h5
                  className="tile-additionaltext caption-xs"
                />
              </div>
            </li>
            <li
              className="tile tile--twoline"
            >
              <div>
                <h4
                  className="tile-maintext body-s"
                >
                  Activity Diagram
                </h4>
                <h5
                  className="tile-additionaltext caption-xs"
                />
              </div>
            </li>
          </div>
        </ul>
      </div>
    </div>
    <div
      className="projectview-workflow"
    >
      <div
        className="card workflowcard"
      >
        <div
          style={
            Object {
              "paddingBottom": "16px",
              "paddingLeft": "16px",
              "paddingRight": "16px",
              "paddingTop": "16px",
            }
          }
        >
          <h2
            className="card-primarytitle title-l"
          >
            Workflow
          </h2>
        </div>
        <div
          className="tabbar"
        >
          <div
            className="tabbar-nav tabbar-nav--disabled"
            data-side="previous"
            onClick={[Function]}
          >
            &lt;
          </div>
          <div
            className="tabbar-tabs"
          >
            <div
              className="tabbar-tab title-m tabbar-tab--selected"
              data-index={0}
              onClick={[Function]}
            >
              page1
            </div>
          </div>
          <div
            className="tabbar-nav tabbar-nav--disabled"
            data-side="next"
            onClick={[Function]}
          >
            &gt;
          </div>
        </div>
        <div
          style={
            Object {
              "paddingBottom": "16px",
              "paddingLeft": "16px",
              "paddingRight": "16px",
              "paddingTop": "8px",
            }
          }
        >
          <div
            className="card-text body-s"
          >
            No sections found in the workflow
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProjectView renders the project without any workflow 1`] = `
<div
  className="projectview"
>
  <div
    className="card projectheadercard"
  >
    <div
      style={
        Object {
          "paddingBottom": "16px",
          "paddingLeft": "16px",
          "paddingRight": "16px",
          "paddingTop": "16px",
        }
      }
    >
      <h1
        className="card-herotitle title-xl"
      >
        Project
      </h1>
    </div>
    <div
      style={
        Object {
          "paddingBottom": "8px",
          "paddingLeft": "16px",
          "paddingRight": "16px",
          "paddingTop": "8px",
        }
      }
    >
      <div
        className="projectheadercard-viewdescription"
      >
        <p>
          No description provided
        </p>
        <div
          style={
            Object {
              "paddingBottom": undefined,
              "paddingLeft": "16px",
              "paddingRight": undefined,
              "paddingTop": undefined,
            }
          }
        >
          <button
            className="button button--default"
            onClick={[Function]}
          >
            <div
              style={
                Object {
                  "paddingBottom": "8px",
                  "paddingLeft": "16px",
                  "paddingRight": "16px",
                  "paddingTop": "8px",
                }
              }
            >
              Edit
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="projectview-main"
  >
    <div
      className="projectview-details"
    >
      <div
        className="card projectsemanticresourceslistcard"
      >
        <div
          style={
            Object {
              "paddingBottom": "16px",
              "paddingLeft": "16px",
              "paddingRight": "16px",
              "paddingTop": "16px",
            }
          }
        >
          <h2
            className="card-primarytitle title-l"
          >
            Semantic Resources
          </h2>
        </div>
        <ul
          className="list list--highlighted"
        >
          <div
            style={
              Object {
                "paddingBottom": "8px",
                "paddingLeft": undefined,
                "paddingRight": undefined,
                "paddingTop": "8px",
              }
            }
          >
            <li
              className="tile tile--singleline"
            >
              <h4
                className="tile-maintext body-s"
              >
                /model/model.ecore
              </h4>
              <div
                className="semanticresources-size caption-s"
              />
            </li>
          </div>
        </ul>
      </div>
      <div
        className="card projectrepresentationslistcard"
      >
        <div
          style={
            Object {
              "paddingBottom": "16px",
              "paddingLeft": "16px",
              "paddingRight": "16px",
              "paddingTop": "16px",
            }
          }
        >
          <h2
            className="card-primarytitle title-l"
          >
            Representations
          </h2>
        </div>
        <ul
          className="list list--highlighted"
        >
          <div
            style={
              Object {
                "paddingBottom": "8px",
                "paddingLeft": undefined,
                "paddingRight": undefined,
                "paddingTop": "8px",
              }
            }
          >
            <li
              className="tile tile--twoline"
            >
              <div>
                <h4
                  className="tile-maintext body-s"
                >
                  Class Diagram
                </h4>
                <h5
                  className="tile-additionaltext caption-xs"
                />
              </div>
            </li>
            <li
              className="tile tile--twoline"
            >
              <div>
                <h4
                  className="tile-maintext body-s"
                >
                  Activity Diagram
                </h4>
                <h5
                  className="tile-additionaltext caption-xs"
                />
              </div>
            </li>
          </div>
        </ul>
      </div>
    </div>
    <div
      className="projectview-workflow"
    >
      <div
        className="card workflowcard"
      >
        <div
          style={
            Object {
              "paddingBottom": "16px",
              "paddingLeft": "16px",
              "paddingRight": "16px",
              "paddingTop": "16px",
            }
          }
        >
          <h2
            className="card-primarytitle title-l"
          >
            Workflow
          </h2>
        </div>
        <div
          style={
            Object {
              "paddingBottom": "16px",
              "paddingLeft": "16px",
              "paddingRight": "16px",
              "paddingTop": "8px",
            }
          }
        >
          <div
            className="card-text body-s"
          >
            No workflow pages found
          </div>
        </div>
        <div
          style={
            Object {
              "paddingBottom": "16px",
              "paddingLeft": "16px",
              "paddingRight": "16px",
              "paddingTop": "8px",
            }
          }
        >
          <div
            className="card-text body-s"
          >
            No sections found in the workflow
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProjectView renders the project without sections 1`] = `
<div
  className="projectview"
>
  <div
    className="card projectheadercard"
  >
    <div
      style={
        Object {
          "paddingBottom": "16px",
          "paddingLeft": "16px",
          "paddingRight": "16px",
          "paddingTop": "16px",
        }
      }
    >
      <h1
        className="card-herotitle title-xl"
      >
        Project
      </h1>
    </div>
    <div
      style={
        Object {
          "paddingBottom": "8px",
          "paddingLeft": "16px",
          "paddingRight": "16px",
          "paddingTop": "8px",
        }
      }
    >
      <div
        className="projectheadercard-viewdescription"
      >
        <p>
          No description provided
        </p>
        <div
          style={
            Object {
              "paddingBottom": undefined,
              "paddingLeft": "16px",
              "paddingRight": undefined,
              "paddingTop": undefined,
            }
          }
        >
          <button
            className="button button--default"
            onClick={[Function]}
          >
            <div
              style={
                Object {
                  "paddingBottom": "8px",
                  "paddingLeft": "16px",
                  "paddingRight": "16px",
                  "paddingTop": "8px",
                }
              }
            >
              Edit
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="projectview-main"
  >
    <div
      className="projectview-details"
    >
      <div
        className="card projectsemanticresourceslistcard"
      >
        <div
          style={
            Object {
              "paddingBottom": "16px",
              "paddingLeft": "16px",
              "paddingRight": "16px",
              "paddingTop": "16px",
            }
          }
        >
          <h2
            className="card-primarytitle title-l"
          >
            Semantic Resources
          </h2>
        </div>
        <ul
          className="list list--highlighted"
        >
          <div
            style={
              Object {
                "paddingBottom": "8px",
                "paddingLeft": undefined,
                "paddingRight": undefined,
                "paddingTop": "8px",
              }
            }
          >
            <li
              className="tile tile--singleline"
            >
              <h4
                className="tile-maintext body-s"
              >
                /model/model.ecore
              </h4>
              <div
                className="semanticresources-size caption-s"
              />
            </li>
          </div>
        </ul>
      </div>
      <div
        className="card projectrepresentationslistcard"
      >
        <div
          style={
            Object {
              "paddingBottom": "16px",
              "paddingLeft": "16px",
              "paddingRight": "16px",
              "paddingTop": "16px",
            }
          }
        >
          <h2
            className="card-primarytitle title-l"
          >
            Representations
          </h2>
        </div>
        <ul
          className="list list--highlighted"
        >
          <div
            style={
              Object {
                "paddingBottom": "8px",
                "paddingLeft": undefined,
                "paddingRight": undefined,
                "paddingTop": "8px",
              }
            }
          >
            <li
              className="tile tile--twoline"
            >
              <div>
                <h4
                  className="tile-maintext body-s"
                >
                  Class Diagram
                </h4>
                <h5
                  className="tile-additionaltext caption-xs"
                />
              </div>
            </li>
            <li
              className="tile tile--twoline"
            >
              <div>
                <h4
                  className="tile-maintext body-s"
                >
                  Activity Diagram
                </h4>
                <h5
                  className="tile-additionaltext caption-xs"
                />
              </div>
            </li>
          </div>
        </ul>
      </div>
    </div>
    <div
      className="projectview-workflow"
    >
      <div
        className="card workflowcard"
      >
        <div
          style={
            Object {
              "paddingBottom": "16px",
              "paddingLeft": "16px",
              "paddingRight": "16px",
              "paddingTop": "16px",
            }
          }
        >
          <h2
            className="card-primarytitle title-l"
          >
            Workflow
          </h2>
        </div>
        <div
          className="tabbar"
        >
          <div
            className="tabbar-nav tabbar-nav--disabled"
            data-side="previous"
            onClick={[Function]}
          >
            &lt;
          </div>
          <div
            className="tabbar-tabs"
          >
            <div
              className="tabbar-tab title-m tabbar-tab--selected"
              data-index={0}
              onClick={[Function]}
            >
              page1
            </div>
          </div>
          <div
            className="tabbar-nav tabbar-nav--disabled"
            data-side="next"
            onClick={[Function]}
          >
            &gt;
          </div>
        </div>
        <div
          style={
            Object {
              "paddingBottom": "16px",
              "paddingLeft": "16px",
              "paddingRight": "16px",
              "paddingTop": "8px",
            }
          }
        >
          <div
            className="card-text body-s"
          >
            No sections found in the workflow
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
